2014-01-03  Charlie Zender  <zender@uci.edu>

	* Add stubs for two new (and not-yet-supported) chunking maps: map_xst and map_lfp

	* Verified nccopy does not preserve pre-set _Chunksizes when copying variables

	* Revert to completing nco_cnk_sz_set_trv() only when user-specified

	* Fix bug where nco_var_lst_dvd_trv() was called with cnk_map, cnk_plc instead of pck_map, pck_plc

2014-01-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn mmr, ncra.c fixes, hdf4, autocnv, hdn
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1

	* Add nco_op_typ_cf_sng() for cell_methods functionality

	* Refactored chunking code. Exposed old bug in is_chunked flag. Many regressions.

	* Fixed nco_cnk_sz_set_trv() bug where nco_cnk_dsk_inq() was called with output not input ID

	* Replace cnk_sct with cnk_dmn, cnk with cnk_dmn in preparation	for new chunk structure

	* Add nco_[get/set]_chunk_cache() prototypes

	* Tidy nco_cnk_sz_set_trv()

2013-12-31  Charlie Zender  <zender@uci.edu>

	* Prevent printing hidden attributes on netCDF3 files

	* Fix error when new nco_inq_var_fill() stub used on netCDF3 files

	* XML mode deprecate emulation of toolsUI 4.3 _FillValue behavior for unsigned types (present in NCO 4.3.7-4.3.9)

2013-12-30  Charlie Zender  <zender@uci.edu>

	* ncks document --hdn, autoconversion, --fix_rec_dmn changes

	* Update copyright year to 2014

	* Verified snapshot passes tests on Yellowstone

	* NCO snapshot fails all ncra on tephra/netCDF3-only. No obvious valgrind issues.

	* Add regressions tests for ncra/ncrcat issues fixed at AGU
	including incorrect treatment of missing values with MRO, and
	detection of input_complete when stride skips user-specified idx_end_max

2013-12-29  Charlie Zender  <zender@uci.edu>

	* Print hidden attributes with --hdn, --hidden
